--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.andreasackermann.popularmovies.MainActivity" />
         </activity>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name="de.andreasackermann.popularmovies.data.MoviesProvider"
+            android:exported="false"
+            android:syncable="true" />
     </application>
+
+
+
 
 </manifest>
